 * Fix hedgehogs being pushed around (and other collision bugs) when they overlap
 * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
 * Fix poison damage not working in first round
 * Use player-chosen team identity in campaigns and singleplayer missions
 * Fix player-chosen teams ignoring custom team controls in campaigns

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Allow to leave a control unused
 + New chat command: “/help room” (shows room chat commands within the game)

Graphics:
 + Show contour of flying saucer when in highly opaque water
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Display player name of own teams in online games
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Suppress “<team> is gone.” message at end of game

Frontend:
 + Restructure credits
 + Credits screen in main menu is now translatable
 * Fix force-locked schemes getting unlocked when changing map types

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)